--- a/index.html
+++ b/index.html
@@ -5,27 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
       <!-- Standard Meta Tags for SEO -->
-      <title>Gavin Hensley - Full-Stack Engineer Portfolio</title>
-      <meta name="description" content="Portfolio of Gavin Hensley, a self-taught full-stack engineer seeking entry-level opportunities. Explore projects built with React, TypeScript, and Next.js.">
-      <meta name="keywords" content="full-stack engineer, full-stack developer,portfolio, React, TypeScript, Next.js, Node.js, Express, MongoDB, entry-level, web development, Gavin Hensley">
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta name="author" content="Gavin Hensley">
-      <meta name="robots" content="index, follow">
-    
-      <!-- Open Graph Meta Tags for Social Media -->
-      <meta property="og:title" content="Gavin Hensley - Full-Stack Engineer Portfolio">
-      <meta property="og:description" content="Explore my portfolio showcasing full-stack projects built with React, TypeScript, and Node.js. I’m actively seeking entry-level web development opportunities!">
-      <meta property="og:image" content="./src/assets/images/portfolio-screenshot.png">
-      <meta property="og:url" content="https://gavinhensley.dev">
-      <meta property="og:type" content="website">
-      <meta property="og:site_name" content="Gavin Hensley Portfolio">
-    
-      <!-- Twitter Card Meta Tags -->
-      <meta name="twitter:card" content="summary_large_image">
-      <meta name="twitter:title" content="Gavin Hensley - Full-Stack Engineer Portfolio">
-      <meta name="twitter:description" content="Explore my portfolio showcasing full-stack projects built with React, TypeScript, and Node.js. I’m actively seeking entry-level web development opportunities!">
-      <meta name="twitter:image" content="./src/assets/images/portfolio-screenshot.png">
+    <title>Gavin Hensley – Full-Stack Software Engineer Portfolio</title>
+    <meta name="description" content="Portfolio of Gavin Hensley, a full-stack software engineer skilled in React, TypeScript, Node.js, and Supabase. Actively seeking front-end, back-end, and full-stack engineering roles.">
+    <meta name="keywords" content="full-stack software engineer, front-end developer, back-end developer, React, TypeScript, Next.js, Node.js, Supabase, GraphQL, web development, Gavin Hensley">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Gavin Hensley">
+    <meta name="robots" content="index, follow">
+
+    <!-- Open Graph Meta Tags for Social Media -->
+    <meta property="og:title" content="Gavin Hensley – Full-Stack Software Engineer Portfolio">
+    <meta property="og:description" content="Explore my portfolio showcasing modern full-stack projects built with React, TypeScript, Node.js, and Supabase. Open to front-end, back-end, and full-stack engineering roles.">
+    <meta property="og:image" content="./src/assets/images/portfolio-screenshot.png">
+    <meta property="og:url" content="https://gavinhensley.dev">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Gavin Hensley Portfolio">
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Gavin Hensley – Full-Stack Software Engineer Portfolio">
+    <meta name="twitter:description" content="Explore my portfolio featuring modern web applications built with React, TypeScript, and Node.js. I'm open to front-end, back-end, and full-stack engineering roles.">
+    <meta name="twitter:image" content="./src/assets/images/portfolio-screenshot.png">
+    <meta name="twitter:creator" content="@GavinHensleyDev">
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-ET6YVNHDF0"></script>
